Fix overflow issues, refactor code, clean codebase and add background image to menu

--- a/style.css
+++ b/style.css
@@ -73,43 +73,6 @@ body {
 
 /*Search bar Styling*/
 
-.form {
-    align-items: center;
-    justify-content: center;
-    margin-right: 60px;
-    margin-top: 30px;
-}
-
-/* .search-container {
-    justify-content: center;
-    align-items: center;
-}
-
-.search-container button {
-    width: 16px;
-    height: 15px;
-} */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .my-links {
     flex-direction: column;
     position: fixed;
@@ -118,7 +81,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: #122a57;
-    /* background-image: url("images/gray-abstract-wireframe-technology-background.jpg"); */
+    background-image: url("images/menu-background.jpg");
     z-index: 20;
     opacity: 0.8;
     transition: transform 0.2s cubic-bezier(0.4, 0, 0.2, 1);
@@ -129,7 +92,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 100%;
+    min-height: 85%;
     margin: 0 auto;
   }
   
@@ -266,7 +229,6 @@ body {
     content: "";
     background-size: 24px 21px;
     background-repeat: repeat-x;
-
 }
 
 .line-break {
@@ -281,6 +243,7 @@ body {
     display: flex;
     flex-direction: column;
 }
+
 .verse {
     margin-top: 20px;
     font-size: 15px;
@@ -306,17 +269,18 @@ body {
 }
 
 .socials {
+    margin: 0 auto;
     margin-top: 10px;
+    margin-left: 24px;
     align-items: center;
+    justify-content: center;
     margin-bottom: 20px;
-    margin-left: 50px;
 }
 
 .socials li a {
-    margin-right: 50px;
+    margin-right: 30px;
     font-size: 30px;
 }
-
 
 /*Popup*/
 .popup-container {
@@ -392,7 +356,7 @@ body {
 
 /*End of Scale with blur animation*/
 
-/*Bounce Effect*/
+/*Start of Bounce Effect*/
 
 .visible-section .gb-popup-bounce-to-bottom,
 .visible-lightbox .gb-popup-bounce-to-bottom {
@@ -497,7 +461,6 @@ form button {
 
 .underline-past-devotions {
     width: 10%;
-
 }
 
 .devotions-card-holder, .devotions-card-container {
@@ -510,7 +473,6 @@ form button {
     padding: 13px;
     align-items: center;
     border-radius: 6px;
-
 }
 
 .devotions-card img {
@@ -521,8 +483,7 @@ form button {
 .card-text {
     flex-direction: column;
     margin: 4px  0;
-    margin-left: 20px;
-    
+    margin-left: 20px;  
 }
 
 .devotions-card-container button {
@@ -577,7 +538,6 @@ form button {
     justify-content: space-between;
     margin: 0 54px;
     margin-top: 10px;
-
 }
 
 .footer-icons li a {
@@ -632,7 +592,6 @@ form button {
 
     .hover-effect:hover {
         text-decoration: underline;
-
     }
 
     .hero {
